--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -3,6 +3,7 @@ name: Build and Push Docker Image to GitHub Packages
 on:
   schedule:
     - cron: '0 0 * * *'
+  workflow_dispatch
 
 jobs:
   build:
