--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -18,5 +18,5 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - run: scripts/gha_build_push.sh 
-        env: |
-          repo: ${{ GITHUB_REPOSITORY }}
+        env:
+          repo: ${{ github.repository_owner }}/${{ github.repository }}
