--- a/renovate.json
+++ b/renovate.json
@@ -7,6 +7,8 @@
     "enabled": true
   },
   "lockFileMaintenance": {
-    "enabled": true
+    "enabled": true,
+    "automerge": true,
+    "schedule": ["before 4am"];
   }
 }
