--- a/renovate.json
+++ b/renovate.json
@@ -9,6 +9,6 @@
   "lockFileMaintenance": {
     "enabled": true,
     "automerge": true,
-    "schedule": ["before 4am"];
+    "schedule": ["before 4am"]
   }
 }
